# FLP

./: tmp.hs
cvika/: 1st.hs
project1/: Makefile  advancedtree.txt  flp-fun.hi  flp-fun.hs  project.cabal  readme.md  test_X.tmp  trained_tree.tmp  vis.py
project1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
project1/tests/: flp-fun_inference_stdout.out  flp-fun_training_stdout.out  hovno.text  training_tests_result.csv
project2/: README.md  flp19-log  flp24-log  flp25-log  hovno.pl  input.txt  input2.pl  input2.txt  makefile  rubiks.py  solution.pl  teste.sh
project2/cubes/: cube_len6_3.txt  cube_len6_3_solution.txt  cube_len7_1.txt  cube_len7_1_solution.txt  cube_len_8_1.txt  cube_len_8_1_solution.txt
rnd/: basic_tree_shit.hs
